--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
+body {
+  margin: 0;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
 .App {
-  text-align: center;
+  text-align: center
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+
+}
+
+.container {
+  display: flex;
+
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  font-size: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  box-shadow: 2px 2px 8px #000;
+  padding: 5rem 5rem;
+  height: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quote {
+text-align: center;
+display: flex;
+align-items: center;
+justify-content: center;
 }
+
+
+button {
+  box-shadow: 2px 2px 8px #000;
+  padding: 8px;
+  border-radius: 15px;
+  width: 300px;
+  height: auto;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  margin: 1rem auto;
+  font-size: 50px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+
+.textRepeat {
+  position: absolute;
+  left:0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  
+}
+.bgText{
+  font-size: 10rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight:900;
+  
+}
+
